--- a/src/WikiMedia.Infrastructure/WikiMedia.Infrastructure.csproj
+++ b/src/WikiMedia.Infrastructure/WikiMedia.Infrastructure.csproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Polly" Version="7.2.1" />
     <PackageReference Include="SharpZipLib" Version="1.3.1" />
   </ItemGroup>
 
